css/hhss.css
 /*========================================================
	Author: Ruby Masciangelo
	happyhalehawaii.com
==========================================================
	GENERIC STYLES
==========================================================
    COLOR PALETTE
    Orange:  #e05e26
    Dark Blue:   #243466
    Light Yellow:   #f0e193
    Yellow:     #eecb31
========================================================*/
@-ms-viewport {
    width: extend-to-zoom;
    zoom: 1.0;
}

@viewport {
    zoom: 1.0;
    width: extend-to-zoom;
}

html {
	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
	font-size: 62.5%;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
}

body {
	font-size: 18px;
	margin: 0;
	font-family: 'Catamaran';
	line-height: 1.42857143;
}

.content {
    text-align: center;
    margin: 10% auto;
}

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 5% 25%;
    padding: auto;
}

/*================NAV============*/
#nav a {
    position: fixed; /* stay in place on scroll */
    z-index: 1; /* stay on top */
    left: -110px; /* Position them outside of the screen */
    transition: 0.3s; /* Add transition on hover */
    padding: 15px; /* 15px padding */
    width: 120px; /* Set a specific width */
    text-decoration: none; /* Remove underline */
    font-size: 20px; /* Increase font size */
    color: #f0e193; /* White text color */
    border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
    background-color: #243466;
}
  
#nav a:hover {
    left: 0; /* On mouse-over, make the elements appear fully */
}
  
#homea {
    top: 20px;
}
  
#shopa {
    top: 80px;
}
  
#abouta {
    top: 140px;
}
  
#policya {
    top: 200px;
}

#contacta {
    top: 260px;
}


/*============HOME==========*/
.cover {
    background: url(./images/hh1-vect.png) no-repeat;
    height: 100vh;
    width: calc(100vw-100px);
    background-size: cover;
    background-position: center;
    margin-top: -26px;
    margin-left: -1px;
    border-bottom: 30px solid #e05e26;
}

/*=========BANNER=========*/
#banner {
    overflow: hidden;
    /* background: url(./images/hhbannervect.png) repeat-x; */
    background: url(./images/hhbannervect2.png) repeat-x;
    height: 100px;
    background-size: auto 100px;
    margin-top: -25px;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.sticky + .content {
    padding-top: 100px;
}

.msg { /*needs padding*/
    display: none;
    text-align: center;
}

h1 {
    color:#243466;
    font-family: 'Fredoka One';
}

.fade{
    -webkit-animation-name: fade;
    -webkit-transition-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}

@-webkit-keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}
/*===================SHOP==============*/
#shop {
    background-color: #243466;
}

div.gallery {
    margin: 10px;
    float: left;
    width: 180px;
}

div.gallery img {
    width: 100%;
    height: auto;
}

div.desc {
    padding: 15px;
    text-align: center;
}

/*===============ABOUT================*/
#about {
    background-color: #f0e193;
    border-top: 100px solid #f0e193;
    border-bottom: 60px solid #f0e193;
}

.grida, .gridb {
    display: grid;
    gap: 15px;
}

.grida img, .gridb img {
    max-width: 100%;
    height: auto;
    padding-top: 15px;
}

.grida {
    align-items: flex-end;
    justify-items: end;
    grid-template-columns: 1fr 1fr 1fr;
}

.gridb {
    align-items: flex-start;
    justify-items: start;
    grid-template-columns: 1fr 2fr;
}

/*==================POLICY================*/
#policy {
    background-color: #e05e26;
    border-top: 100px solid #e05e26;
    border-bottom: 60px solid #e05e26;
}

.gridc, .gridd {
    display: grid;
    align-items: center;
    justify-items: start;
}

.gridc {
    grid-template-columns: 1fr 2fr;
}

.gridc img {
    max-width: 70%;
    height: auto;
}

.gridd {
    grid-template-rows: 1fr 1fr;
}

/*==================CONTACT/FOOT==========*/
#contact {
    width: 100%;
    overflow: hidden;
    /* background: url(./images/hhbannervect.png) repeat-x; */
    background: url(./images/hhbannervect2.png) repeat-x;
    height: 200px;
    background-size: auto 200px;
    margin-bottom: -500px;
}

